--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,10 +1,11 @@
 <div class='container'>
   <h2>Mis Tareas</h2>
+	
 	<!-- input -->
 	<form role="form" ng-submit="addTarea()">
 		<div class="row">
 			<div class="input-group">
-			<input type="text" ng-model="tarea" placeholder="Ingrese la tarea" class="form-control">
+			<input type="text" ng-model="tarea" placeholder="Ingrese la tarea que le gusta" class="form-control">
 			<span class="input-group-btn">
 				<input type="submit" class="btn btn-primary" value="Añadir">
 			</span>
@@ -12,8 +13,14 @@
 		</div>
 	</form>
 	<p></p>
+	
 	<!-- lista -->
-	<p class='form-group' ng-repeat='tarea in tareas'>
-		<input type='text' ng-model='tarea' class='form-control'/>
-	</p>
+	<div ui-sortable ng-model="tareas">
+		<p class='input-group' ng-repeat='tarea in tareas' style="padding: 5px; cursor: move">
+			<input type='text' ng-model='tarea' class='form-control'/>
+			<span class="input-group-btn">
+				<button class="btn btn-danger" ng-click="eliminarTarea($index)" aria-label="Eliminar">X</button>
+			</span>
+		</p>
+	</div>
 </div>
